--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "main": "api/index.ts",
   "ampt": {
-    "org": "",
-    "app": "react-vite"
+    "app": "react-vite-test-11",
+    "org": "benminer"
   },
   "files": [
     "!src/**/*"
